code/typescript/RealTimeNews/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time News client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/badge/npm-v0.12.0-orange)](https://www.npmjs.com/package/@factset/sdk-realtimenews/v/0.12.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet’s StreetAccount news and 3rd party content through an API that seamlessly integrates with
[quotes](https://developer.factset.com/api-catalog/real-time-quotes-api),
[time series](https://developer.factset.com/api-catalog/real-time-time-series-api),
[watchlists](https://developer.factset.com/api-catalog/watchlist-api-digital-portals), and other Functional APIs.

Search for news articles from various news distributors and publishers. Incorporate a multitude of search parameters such as region, category, source, article type and provider-specific meta data, to easily filter out the noise.

All search and list endpoints can be subscribed to receive streamed updates.

News providers include:

* APA
* AWP 
* Businesswire
* Cercle Finance
* Direkt News SE
* Dow Jones News
* dpa
* dpa-AFX 
* EUWAX
* GlobenewsWire
* Kauppalehti
* MT Newswires
* MoneyAM
* newsaktuell
* OMX
* PR Newswire 
* Ritzau Finans
* StreetAccount News
* TDN News
      
See the [Real-Time Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price and performance information, plus basic support for security identifier cross-reference.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.12.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-realtimenews@0.12.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-realtimenews@0.12.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, NewsApi } = require('@factset/sdk-realtimenews');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new NewsApi();
const code = "code_example"; // String | 
const opts = {
  'includeMedia': false, // Boolean | 
  'attributes': ["null"], // [String] | Limit the attributes returned in the response to the specified set.
  'language': "language_example" // String | 
};

// Call api endpoint
apiInstance.getNewsArticleGet(code, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-realtimenews');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*realtimenews.NewsApi* | [**getNewsArticleGet**](docs/NewsApi.md#getNewsArticleGet) | **GET** /news/article/get | Details for a news article.
*realtimenews.NewsApi* | [**getNewsArticleTypeGet**](docs/NewsApi.md#getNewsArticleTypeGet) | **GET** /news/article/type/get | Details for a news article type.
*realtimenews.NewsApi* | [**getNewsArticleTypeList**](docs/NewsApi.md#getNewsArticleTypeList) | **GET** /news/article/type/list | List of news article types.
*realtimenews.NewsApi* | [**getNewsDistributorGet**](docs/NewsApi.md#getNewsDistributorGet) | **GET** /news/distributor/get | Details of a distributor.
*realtimenews.NewsApi* | [**getNewsDistributorList**](docs/NewsApi.md#getNewsDistributorList) | **GET** /news/distributor/list | List of distributors.
*realtimenews.NewsApi* | [**getNewsPublisherGet**](docs/NewsApi.md#getNewsPublisherGet) | **GET** /news/publisher/get | Details of a publisher.
*realtimenews.NewsApi* | [**getNewsPublisherList**](docs/NewsApi.md#getNewsPublisherList) | **GET** /news/publisher/list | List of publishers.
*realtimenews.NewsApi* | [**getNewsPublisherListByDistributor**](docs/NewsApi.md#getNewsPublisherListByDistributor) | **GET** /news/publisher/listByDistributor | List of publishers provided by the given distributor.
*realtimenews.NewsApi* | [**postNewsArticleList**](docs/NewsApi.md#postNewsArticleList) | **POST** /news/article/list | List of news articles.
*realtimenews.NewsApi* | [**postNewsArticleListByChain**](docs/NewsApi.md#postNewsArticleListByChain) | **POST** /news/article/listByChain | List news articles of an article chain.
*realtimenews.NewsApi* | [**postNewsArticleListByIndex**](docs/NewsApi.md#postNewsArticleListByIndex) | **POST** /news/article/listByIndex | News articles for instruments that are constituents of the given indices.
*realtimenews.NewsApi* | [**postNewsArticleListByInstrument**](docs/NewsApi.md#postNewsArticleListByInstrument) | **POST** /news/article/listByInstrument | News articles for instruments.
*realtimenews.NewsApi* | [**postNewsArticleListByMediaKind**](docs/NewsApi.md#postNewsArticleListByMediaKind) | **POST** /news/article/listByMediaKind | List news articles which contain media of specific media kinds.
*realtimenews.NewsApi* | [**postNewsArticleSearchByText**](docs/NewsApi.md#postNewsArticleSearchByText) | **POST** /news/article/searchByText | Search for news articles using a fulltext search.
*realtimenews.NewsApi* | [**postNewsPublisherSearchByName**](docs/NewsApi.md#postNewsPublisherSearchByName) | **POST** /news/publisher/searchByName | Search for publishers.


## Documentation for Models

 - [realtimenews.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [realtimenews.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimenews.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [realtimenews.InlineResponse200](docs/InlineResponse200.md)
 - [realtimenews.InlineResponse2001](docs/InlineResponse2001.md)
 - [realtimenews.InlineResponse20010](docs/InlineResponse20010.md)
 - [realtimenews.InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [realtimenews.InlineResponse20010Meta](docs/InlineResponse20010Meta.md)
 - [realtimenews.InlineResponse20011](docs/InlineResponse20011.md)
 - [realtimenews.InlineResponse20011Data](docs/InlineResponse20011Data.md)
 - [realtimenews.InlineResponse2001Categories](docs/InlineResponse2001Categories.md)
 - [realtimenews.InlineResponse2001Chain](docs/InlineResponse2001Chain.md)
 - [realtimenews.InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [realtimenews.InlineResponse2001Distributor](docs/InlineResponse2001Distributor.md)
 - [realtimenews.InlineResponse2001Fsym](docs/InlineResponse2001Fsym.md)
 - [realtimenews.InlineResponse2001FsymSecurity](docs/InlineResponse2001FsymSecurity.md)
 - [realtimenews.InlineResponse2001Instruments](docs/InlineResponse2001Instruments.md)
 - [realtimenews.InlineResponse2001Language](docs/InlineResponse2001Language.md)
 - [realtimenews.InlineResponse2001Meta](docs/InlineResponse2001Meta.md)
 - [realtimenews.InlineResponse2001Publisher](docs/InlineResponse2001Publisher.md)
 - [realtimenews.InlineResponse2001Types](docs/InlineResponse2001Types.md)
 - [realtimenews.InlineResponse2002](docs/InlineResponse2002.md)
 - [realtimenews.InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [realtimenews.InlineResponse2002DataArticles](docs/InlineResponse2002DataArticles.md)
 - [realtimenews.InlineResponse2002DataDistributor](docs/InlineResponse2002DataDistributor.md)
 - [realtimenews.InlineResponse2003](docs/InlineResponse2003.md)
 - [realtimenews.InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [realtimenews.InlineResponse2003DataIdentifiers](docs/InlineResponse2003DataIdentifiers.md)
 - [realtimenews.InlineResponse2003DataStatus](docs/InlineResponse2003DataStatus.md)
 - [realtimenews.InlineResponse2004](docs/InlineResponse2004.md)
 - [realtimenews.InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [realtimenews.InlineResponse2004DataIdentifiers](docs/InlineResponse2004DataIdentifiers.md)
 - [realtimenews.InlineResponse2004DataStatus](docs/InlineResponse2004DataStatus.md)
 - [realtimenews.InlineResponse2005](docs/InlineResponse2005.md)
 - [realtimenews.InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [realtimenews.InlineResponse2006](docs/InlineResponse2006.md)
 - [realtimenews.InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [realtimenews.InlineResponse2007](docs/InlineResponse2007.md)
 - [realtimenews.InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [realtimenews.InlineResponse2007DataDelivery](docs/InlineResponse2007DataDelivery.md)
 - [realtimenews.InlineResponse2008](docs/InlineResponse2008.md)
 - [realtimenews.InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [realtimenews.InlineResponse2009](docs/InlineResponse2009.md)
 - [realtimenews.InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [realtimenews.InlineResponse2009DataDistributor](docs/InlineResponse2009DataDistributor.md)
 - [realtimenews.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [realtimenews.InlineResponse200DataCategories](docs/InlineResponse200DataCategories.md)
 - [realtimenews.InlineResponse200DataDistributor](docs/InlineResponse200DataDistributor.md)
 - [realtimenews.InlineResponse200DataFsym](docs/InlineResponse200DataFsym.md)
 - [realtimenews.InlineResponse200DataFsymSecurity](docs/InlineResponse200DataFsymSecurity.md)
 - [realtimenews.InlineResponse200DataInstruments](docs/InlineResponse200DataInstruments.md)
 - [realtimenews.InlineResponse200DataLanguage](docs/InlineResponse200DataLanguage.md)
 - [realtimenews.InlineResponse200DataMedia](docs/InlineResponse200DataMedia.md)
 - [realtimenews.InlineResponse200DataPublisher](docs/InlineResponse200DataPublisher.md)
 - [realtimenews.InlineResponse200DataTypes](docs/InlineResponse200DataTypes.md)
 - [realtimenews.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [realtimenews.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [realtimenews.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimenews.PartialOutputObject](docs/PartialOutputObject.md)
 - [realtimenews.PostNewsArticleListByChainRequest](docs/PostNewsArticleListByChainRequest.md)
 - [realtimenews.PostNewsArticleListByChainRequestData](docs/PostNewsArticleListByChainRequestData.md)
 - [realtimenews.PostNewsArticleListByChainRequestDataFilter](docs/PostNewsArticleListByChainRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListByIndexRequest](docs/PostNewsArticleListByIndexRequest.md)
 - [realtimenews.PostNewsArticleListByIndexRequestData](docs/PostNewsArticleListByIndexRequestData.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataIdentifier](docs/PostNewsArticleListByIndexRequestDataIdentifier.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequest](docs/PostNewsArticleListByInstrumentRequest.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestData](docs/PostNewsArticleListByInstrumentRequestData.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataIdentifier](docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequest](docs/PostNewsArticleListByMediaKindRequest.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestData](docs/PostNewsArticleListByMediaKindRequestData.md)
 - [realtimenews.PostNewsArticleListRequest](docs/PostNewsArticleListRequest.md)
 - [realtimenews.PostNewsArticleListRequestData](docs/PostNewsArticleListRequestData.md)
 - [realtimenews.PostNewsArticleListRequestDataFilter](docs/PostNewsArticleListRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterCategories](docs/PostNewsArticleListRequestDataFilterCategories.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterDistributor](docs/PostNewsArticleListRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterLanguage](docs/PostNewsArticleListRequestDataFilterLanguage.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterPublisher](docs/PostNewsArticleListRequestDataFilterPublisher.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterRange](docs/PostNewsArticleListRequestDataFilterRange.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterRegions](docs/PostNewsArticleListRequestDataFilterRegions.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterTypes](docs/PostNewsArticleListRequestDataFilterTypes.md)
 - [realtimenews.PostNewsArticleListRequestMeta](docs/PostNewsArticleListRequestMeta.md)
 - [realtimenews.PostNewsArticleListRequestMetaPagination](docs/PostNewsArticleListRequestMetaPagination.md)
 - [realtimenews.PostNewsArticleListRequestMetaSubscription](docs/PostNewsArticleListRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleSearchByTextRequest](docs/PostNewsArticleSearchByTextRequest.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestData](docs/PostNewsArticleSearchByTextRequestData.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataCategories](docs/PostNewsArticleSearchByTextRequestDataCategories.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataCriteria](docs/PostNewsArticleSearchByTextRequestDataCriteria.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataDistributor](docs/PostNewsArticleSearchByTextRequestDataDistributor.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataIndices](docs/PostNewsArticleSearchByTextRequestDataIndices.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataInstruments](docs/PostNewsArticleSearchByTextRequestDataInstruments.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataLanguage](docs/PostNewsArticleSearchByTextRequestDataLanguage.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataPublisher](docs/PostNewsArticleSearchByTextRequestDataPublisher.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataRegions](docs/PostNewsArticleSearchByTextRequestDataRegions.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataText](docs/PostNewsArticleSearchByTextRequestDataText.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataTextCriteria](docs/PostNewsArticleSearchByTextRequestDataTextCriteria.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataTypes](docs/PostNewsArticleSearchByTextRequestDataTypes.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequest](docs/PostNewsPublisherSearchByNameRequest.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestData](docs/PostNewsPublisherSearchByNameRequestData.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilter](docs/PostNewsPublisherSearchByNameRequestDataFilter.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilterDelivery](docs/PostNewsPublisherSearchByNameRequestDataFilterDelivery.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilterDistributor](docs/PostNewsPublisherSearchByNameRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestMeta](docs/PostNewsPublisherSearchByNameRequestMeta.md)
 - [realtimenews.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
