code/typescript/RealTimeNews/v4/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time News client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v4.0.0-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/badge/npm-v0.20.2-orange)](https://www.npmjs.com/package/@factset/sdk-realtimenews/v/0.20.2)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet’s StreetAccount news and 3rd party content through an API that seamlessly integrates with
[quotes](https://developer.factset.com/api-catalog/real-time-quotes-api),
[time series](https://developer.factset.com/api-catalog/real-time-time-series-api),
[watchlists](https://developer.factset.com/api-catalog/watchlist-api-digital-portals), and other Functional APIs.

Search for news articles from various news distributors and publishers. Incorporate a multitude of search parameters such as region, category, source, article type and provider-specific meta data, to easily filter out the noise.

All search and list endpoints can be subscribed to receive streamed updates.

News providers include:

* APA
* AWP 
* Businesswire
* Cercle Finance
* Direkt News SE
* Dow Jones News
* dpa
* dpa-AFX 
* EUWAX
* GlobenewsWire
* Kauppalehti
* MT Newswires
* MoneyAM
* newsaktuell
* OMX
* PR Newswire 
* Ritzau Finans
* StreetAccount News
* TDN News
      
See the [Real-Time Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price and performance information, plus basic support for security identifier cross-reference.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 4.0.0
- SDK version: 0.20.2
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-realtimenews@0.20.2
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-realtimenews@0.20.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, BasicApi } = require('@factset/sdk-realtimenews');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new BasicApi();
const opts = {
  'attributes': ["null"] // [String] | Limit the attributes returned in the response to the specified set.
};

// Call api endpoint
apiInstance.getBasicAssetClassList(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-realtimenews');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*realtimenews.BasicApi* | [**getBasicAssetClassList**](docs/BasicApi.md#getBasicAssetClassList) | **GET** /basic/asset-class/list | List of asset classes.
*realtimenews.BasicApi* | [**getBasicBenchmarkTypeList**](docs/BasicApi.md#getBasicBenchmarkTypeList) | **GET** /basic/benchmark/type/list | List of benchmark types.
*realtimenews.BasicApi* | [**getBasicFrequencyTypeList**](docs/BasicApi.md#getBasicFrequencyTypeList) | **GET** /basic/frequency/type/list | List of frequency types.
*realtimenews.BasicApi* | [**getBasicLanguageGet**](docs/BasicApi.md#getBasicLanguageGet) | **GET** /basic/language/get | Details for a language.
*realtimenews.BasicApi* | [**getBasicLanguageGetByCode**](docs/BasicApi.md#getBasicLanguageGetByCode) | **GET** /basic/language/get-by-code | Details for a language identified by code.
*realtimenews.BasicApi* | [**getBasicLanguageList**](docs/BasicApi.md#getBasicLanguageList) | **GET** /basic/language/list | List of languages.
*realtimenews.BasicApi* | [**getBasicMarketGet**](docs/BasicApi.md#getBasicMarketGet) | **GET** /basic/market/get | Details of a market.
*realtimenews.BasicApi* | [**getBasicMarketGroupList**](docs/BasicApi.md#getBasicMarketGroupList) | **GET** /basic/market/group/list | List of market groups.
*realtimenews.BasicApi* | [**getBasicMarketTypeList**](docs/BasicApi.md#getBasicMarketTypeList) | **GET** /basic/market/type/list | List of market types.
*realtimenews.BasicApi* | [**getBasicMediaKindList**](docs/BasicApi.md#getBasicMediaKindList) | **GET** /basic/media/kind/list | List of media kinds.
*realtimenews.BasicApi* | [**getBasicRegionContinentGet**](docs/BasicApi.md#getBasicRegionContinentGet) | **GET** /basic/region/continent/get | Details for a continent.
*realtimenews.BasicApi* | [**getBasicRegionContinentList**](docs/BasicApi.md#getBasicRegionContinentList) | **GET** /basic/region/continent/list | List of continents.
*realtimenews.BasicApi* | [**getBasicRegionCountryGet**](docs/BasicApi.md#getBasicRegionCountryGet) | **GET** /basic/region/country/get | Details for a country.
*realtimenews.BasicApi* | [**getBasicRegionCountryGetByCode**](docs/BasicApi.md#getBasicRegionCountryGetByCode) | **GET** /basic/region/country/get-by-code | Details for a country identified by code.
*realtimenews.BasicApi* | [**getBasicRegionCountryList**](docs/BasicApi.md#getBasicRegionCountryList) | **GET** /basic/region/country/list | List of countries.
*realtimenews.BasicApi* | [**getBasicRegionGet**](docs/BasicApi.md#getBasicRegionGet) | **GET** /basic/region/get | Details for a region.
*realtimenews.BasicApi* | [**getBasicRegionList**](docs/BasicApi.md#getBasicRegionList) | **GET** /basic/region/list | List of regions.
*realtimenews.BasicApi* | [**getBasicTimezoneGet**](docs/BasicApi.md#getBasicTimezoneGet) | **GET** /basic/timezone/get | Details of a timezone.
*realtimenews.BasicApi* | [**getBasicTimezoneGetByName**](docs/BasicApi.md#getBasicTimezoneGetByName) | **GET** /basic/timezone/get-by-name | Details of a timezone identified by name.
*realtimenews.BasicApi* | [**getBasicValueUnitAlternativeList**](docs/BasicApi.md#getBasicValueUnitAlternativeList) | **GET** /basic/value-unit/alternative/list | List of alternative units.
*realtimenews.BasicApi* | [**getBasicValueUnitCurrencyFractionalGet**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalGet) | **GET** /basic/value-unit/currency/fractional/get | Details of a fractional currency.
*realtimenews.BasicApi* | [**getBasicValueUnitCurrencyFractionalList**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalList) | **GET** /basic/value-unit/currency/fractional/list | List of fractional currencies.
*realtimenews.BasicApi* | [**getBasicValueUnitGet**](docs/BasicApi.md#getBasicValueUnitGet) | **GET** /basic/value-unit/get | Details of a value unit.
*realtimenews.BasicApi* | [**postBasicBackgroundTextTypeList**](docs/BasicApi.md#postBasicBackgroundTextTypeList) | **POST** /basic/background-text/type/list | List of background text types.
*realtimenews.BasicApi* | [**postBasicDeliveryList**](docs/BasicApi.md#postBasicDeliveryList) | **POST** /basic/delivery/list | List of deliveries.
*realtimenews.BasicApi* | [**postBasicMarketList**](docs/BasicApi.md#postBasicMarketList) | **POST** /basic/market/list | List of markets.
*realtimenews.BasicApi* | [**postBasicMediaTypeList**](docs/BasicApi.md#postBasicMediaTypeList) | **POST** /basic/media/type/list | List of Internet media types.
*realtimenews.BasicApi* | [**postBasicMicOperatingList**](docs/BasicApi.md#postBasicMicOperatingList) | **POST** /basic/mic/operating/list | List of operating market identifier codes (MIC).
*realtimenews.BasicApi* | [**postBasicTimezoneList**](docs/BasicApi.md#postBasicTimezoneList) | **POST** /basic/timezone/list | List of timezones.
*realtimenews.BasicApi* | [**postBasicValueUnitCurrencyList**](docs/BasicApi.md#postBasicValueUnitCurrencyList) | **POST** /basic/value-unit/currency/list | List of currencies.
*realtimenews.BasicApi* | [**postBasicValueUnitCurrencyMainList**](docs/BasicApi.md#postBasicValueUnitCurrencyMainList) | **POST** /basic/value-unit/currency/main/list | List of main currencies.
*realtimenews.BasicApi* | [**postBasicValueUnitList**](docs/BasicApi.md#postBasicValueUnitList) | **POST** /basic/value-unit/list | List of value units.
*realtimenews.CategoryApi* | [**getCategoryDatasetList**](docs/CategoryApi.md#getCategoryDatasetList) | **GET** /category/dataset/list | List of entitled category datasets.
*realtimenews.CategoryApi* | [**getCategoryGet**](docs/CategoryApi.md#getCategoryGet) | **GET** /category/get | Details of a category.
*realtimenews.CategoryApi* | [**getCategoryInstrumentList**](docs/CategoryApi.md#getCategoryInstrumentList) | **GET** /category/instrument/list | List of instruments where a specific dataset has assigned a given category.
*realtimenews.CategoryApi* | [**getCategoryLevelGet**](docs/CategoryApi.md#getCategoryLevelGet) | **GET** /category/level/get | Details of a category level.
*realtimenews.CategoryApi* | [**getCategoryList**](docs/CategoryApi.md#getCategoryList) | **GET** /category/list | List of categories.
*realtimenews.CategoryApi* | [**getCategoryListByLevel**](docs/CategoryApi.md#getCategoryListByLevel) | **GET** /category/list-by-level | List of categories assigned to a category level.
*realtimenews.CategoryApi* | [**getCategoryListBySystem**](docs/CategoryApi.md#getCategoryListBySystem) | **GET** /category/list-by-system | List of categories assigned to a category system.
*realtimenews.CategoryApi* | [**getCategoryPathGet**](docs/CategoryApi.md#getCategoryPathGet) | **GET** /category/path/get | Path from the first level to the level of a specific category.
*realtimenews.CategoryApi* | [**getCategorySystemGet**](docs/CategoryApi.md#getCategorySystemGet) | **GET** /category/system/get | Details of an entitled category system.
*realtimenews.CategoryApi* | [**getCategorySystemList**](docs/CategoryApi.md#getCategorySystemList) | **GET** /category/system/list | List of entitled category systems.
*realtimenews.CategoryApi* | [**getCategorySystemTypeList**](docs/CategoryApi.md#getCategorySystemTypeList) | **GET** /category/system/type/list | List of category system types.
*realtimenews.NewsApi* | [**getNewsArticleGet**](docs/NewsApi.md#getNewsArticleGet) | **GET** /news/article/get | Details for a news article.
*realtimenews.NewsApi* | [**getNewsArticleTypeGet**](docs/NewsApi.md#getNewsArticleTypeGet) | **GET** /news/article/type/get | Details for a news article type.
*realtimenews.NewsApi* | [**getNewsArticleTypeList**](docs/NewsApi.md#getNewsArticleTypeList) | **GET** /news/article/type/list | List of news article types.
*realtimenews.NewsApi* | [**getNewsDistributorGet**](docs/NewsApi.md#getNewsDistributorGet) | **GET** /news/distributor/get | Details of a distributor.
*realtimenews.NewsApi* | [**getNewsDistributorList**](docs/NewsApi.md#getNewsDistributorList) | **GET** /news/distributor/list | List of distributors.
*realtimenews.NewsApi* | [**getNewsPublisherGet**](docs/NewsApi.md#getNewsPublisherGet) | **GET** /news/publisher/get | Details of a publisher.
*realtimenews.NewsApi* | [**getNewsPublisherList**](docs/NewsApi.md#getNewsPublisherList) | **GET** /news/publisher/list | List of publishers.
*realtimenews.NewsApi* | [**getNewsPublisherListByDistributor**](docs/NewsApi.md#getNewsPublisherListByDistributor) | **GET** /news/publisher/list-by-distributor | List of publishers provided by the given distributor.
*realtimenews.NewsApi* | [**postNewsArticleList**](docs/NewsApi.md#postNewsArticleList) | **POST** /news/article/list | List of news articles.
*realtimenews.NewsApi* | [**postNewsArticleListByChain**](docs/NewsApi.md#postNewsArticleListByChain) | **POST** /news/article/list-by-chain | List news articles of an article chain.
*realtimenews.NewsApi* | [**postNewsArticleListByIndex**](docs/NewsApi.md#postNewsArticleListByIndex) | **POST** /news/article/list-by-index | News articles for instruments that are constituents of the given indices.
*realtimenews.NewsApi* | [**postNewsArticleListByInstrument**](docs/NewsApi.md#postNewsArticleListByInstrument) | **POST** /news/article/list-by-instrument | News articles for instruments.
*realtimenews.NewsApi* | [**postNewsArticleListByMediaKind**](docs/NewsApi.md#postNewsArticleListByMediaKind) | **POST** /news/article/list-by-media-kind | List news articles which contain media of specific media kinds.
*realtimenews.NewsApi* | [**postNewsArticleSearchByText**](docs/NewsApi.md#postNewsArticleSearchByText) | **POST** /news/article/search-by-text | Search for news articles using a fulltext search.
*realtimenews.NewsApi* | [**postNewsPublisherSearchByName**](docs/NewsApi.md#postNewsPublisherSearchByName) | **POST** /news/publisher/search-by-name | Search for publishers.


## Documentation for Models

 - [realtimenews.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimenews.GetBasicAssetClassListDataItems](docs/GetBasicAssetClassListDataItems.md)
 - [realtimenews.GetBasicBenchmarkTypeListDataItems](docs/GetBasicBenchmarkTypeListDataItems.md)
 - [realtimenews.GetBasicFrequencyTypeListDataItems](docs/GetBasicFrequencyTypeListDataItems.md)
 - [realtimenews.GetBasicLanguageListDataItems](docs/GetBasicLanguageListDataItems.md)
 - [realtimenews.GetBasicMarketGroupListDataItems](docs/GetBasicMarketGroupListDataItems.md)
 - [realtimenews.GetBasicMarketTypeListDataItems](docs/GetBasicMarketTypeListDataItems.md)
 - [realtimenews.GetBasicMediaKindListDataItems](docs/GetBasicMediaKindListDataItems.md)
 - [realtimenews.GetBasicRegionContinentGetDataCountriesItems](docs/GetBasicRegionContinentGetDataCountriesItems.md)
 - [realtimenews.GetBasicRegionContinentListDataItems](docs/GetBasicRegionContinentListDataItems.md)
 - [realtimenews.GetBasicRegionCountryGetByCodeDataSubdivisionsItems](docs/GetBasicRegionCountryGetByCodeDataSubdivisionsItems.md)
 - [realtimenews.GetBasicRegionCountryGetDataSubdivisionsItems](docs/GetBasicRegionCountryGetDataSubdivisionsItems.md)
 - [realtimenews.GetBasicRegionCountryListDataItems](docs/GetBasicRegionCountryListDataItems.md)
 - [realtimenews.GetBasicRegionGetDataNestedRegionsItems](docs/GetBasicRegionGetDataNestedRegionsItems.md)
 - [realtimenews.GetBasicRegionListDataItems](docs/GetBasicRegionListDataItems.md)
 - [realtimenews.GetBasicValueUnitAlternativeListDataItems](docs/GetBasicValueUnitAlternativeListDataItems.md)
 - [realtimenews.GetBasicValueUnitCurrencyFractionalListDataItems](docs/GetBasicValueUnitCurrencyFractionalListDataItems.md)
 - [realtimenews.GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency](docs/GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency.md)
 - [realtimenews.GetCategoryDatasetListDataItems](docs/GetCategoryDatasetListDataItems.md)
 - [realtimenews.GetCategoryDatasetListDataItemsDelivery](docs/GetCategoryDatasetListDataItemsDelivery.md)
 - [realtimenews.GetCategoryDatasetListDataItemsSystem](docs/GetCategoryDatasetListDataItemsSystem.md)
 - [realtimenews.GetCategoryInstrumentListDataItems](docs/GetCategoryInstrumentListDataItems.md)
 - [realtimenews.GetCategoryListByLevelDataCategoriesItems](docs/GetCategoryListByLevelDataCategoriesItems.md)
 - [realtimenews.GetCategoryListByLevelDataCategoriesItemsParent](docs/GetCategoryListByLevelDataCategoriesItemsParent.md)
 - [realtimenews.GetCategoryListBySystemDataCategoriesItems](docs/GetCategoryListBySystemDataCategoriesItems.md)
 - [realtimenews.GetCategoryListBySystemDataCategoriesItemsLevel](docs/GetCategoryListBySystemDataCategoriesItemsLevel.md)
 - [realtimenews.GetCategoryListBySystemDataCategoriesItemsParent](docs/GetCategoryListBySystemDataCategoriesItemsParent.md)
 - [realtimenews.GetCategoryListDataCategoriesItems](docs/GetCategoryListDataCategoriesItems.md)
 - [realtimenews.GetCategoryListDataCategoriesItemsLevel](docs/GetCategoryListDataCategoriesItemsLevel.md)
 - [realtimenews.GetCategoryListDataCategoriesItemsParent](docs/GetCategoryListDataCategoriesItemsParent.md)
 - [realtimenews.GetCategoryPathGetDataCategoriesItems](docs/GetCategoryPathGetDataCategoriesItems.md)
 - [realtimenews.GetCategorySystemGetDataLevelsItems](docs/GetCategorySystemGetDataLevelsItems.md)
 - [realtimenews.GetCategorySystemListDataItems](docs/GetCategorySystemListDataItems.md)
 - [realtimenews.GetCategorySystemListDataItemsType](docs/GetCategorySystemListDataItemsType.md)
 - [realtimenews.GetCategorySystemTypeListDataItems](docs/GetCategorySystemTypeListDataItems.md)
 - [realtimenews.GetNewsArticleGetDataCategoriesItems](docs/GetNewsArticleGetDataCategoriesItems.md)
 - [realtimenews.GetNewsArticleGetDataInstrumentsItems](docs/GetNewsArticleGetDataInstrumentsItems.md)
 - [realtimenews.GetNewsArticleGetDataMediaItems](docs/GetNewsArticleGetDataMediaItems.md)
 - [realtimenews.GetNewsArticleGetDataTypesItems](docs/GetNewsArticleGetDataTypesItems.md)
 - [realtimenews.GetNewsArticleTypeListDataItems](docs/GetNewsArticleTypeListDataItems.md)
 - [realtimenews.GetNewsDistributorListDataItems](docs/GetNewsDistributorListDataItems.md)
 - [realtimenews.GetNewsDistributorListDataItemsDelivery](docs/GetNewsDistributorListDataItemsDelivery.md)
 - [realtimenews.GetNewsPublisherListByDistributorDataItems](docs/GetNewsPublisherListByDistributorDataItems.md)
 - [realtimenews.GetNewsPublisherListDataItems](docs/GetNewsPublisherListDataItems.md)
 - [realtimenews.GetNewsPublisherListDataItemsDistributor](docs/GetNewsPublisherListDataItemsDistributor.md)
 - [realtimenews.InlineResponse200](docs/InlineResponse200.md)
 - [realtimenews.InlineResponse2001](docs/InlineResponse2001.md)
 - [realtimenews.InlineResponse20010](docs/InlineResponse20010.md)
 - [realtimenews.InlineResponse20011](docs/InlineResponse20011.md)
 - [realtimenews.InlineResponse20012](docs/InlineResponse20012.md)
 - [realtimenews.InlineResponse20013](docs/InlineResponse20013.md)
 - [realtimenews.InlineResponse20014](docs/InlineResponse20014.md)
 - [realtimenews.InlineResponse20015](docs/InlineResponse20015.md)
 - [realtimenews.InlineResponse20015Data](docs/InlineResponse20015Data.md)
 - [realtimenews.InlineResponse20016](docs/InlineResponse20016.md)
 - [realtimenews.InlineResponse20017](docs/InlineResponse20017.md)
 - [realtimenews.InlineResponse20017Data](docs/InlineResponse20017Data.md)
 - [realtimenews.InlineResponse20018](docs/InlineResponse20018.md)
 - [realtimenews.InlineResponse20019](docs/InlineResponse20019.md)
 - [realtimenews.InlineResponse20019Data](docs/InlineResponse20019Data.md)
 - [realtimenews.InlineResponse2002](docs/InlineResponse2002.md)
 - [realtimenews.InlineResponse20020](docs/InlineResponse20020.md)
 - [realtimenews.InlineResponse20020Data](docs/InlineResponse20020Data.md)
 - [realtimenews.InlineResponse20021](docs/InlineResponse20021.md)
 - [realtimenews.InlineResponse20022](docs/InlineResponse20022.md)
 - [realtimenews.InlineResponse20022Data](docs/InlineResponse20022Data.md)
 - [realtimenews.InlineResponse20023](docs/InlineResponse20023.md)
 - [realtimenews.InlineResponse20023Data](docs/InlineResponse20023Data.md)
 - [realtimenews.InlineResponse20024](docs/InlineResponse20024.md)
 - [realtimenews.InlineResponse20025](docs/InlineResponse20025.md)
 - [realtimenews.InlineResponse20025Data](docs/InlineResponse20025Data.md)
 - [realtimenews.InlineResponse20026](docs/InlineResponse20026.md)
 - [realtimenews.InlineResponse20027](docs/InlineResponse20027.md)
 - [realtimenews.InlineResponse20028](docs/InlineResponse20028.md)
 - [realtimenews.InlineResponse20029](docs/InlineResponse20029.md)
 - [realtimenews.InlineResponse20029Data](docs/InlineResponse20029Data.md)
 - [realtimenews.InlineResponse20029DataMainCurrency](docs/InlineResponse20029DataMainCurrency.md)
 - [realtimenews.InlineResponse2003](docs/InlineResponse2003.md)
 - [realtimenews.InlineResponse20030](docs/InlineResponse20030.md)
 - [realtimenews.InlineResponse20031](docs/InlineResponse20031.md)
 - [realtimenews.InlineResponse20032](docs/InlineResponse20032.md)
 - [realtimenews.InlineResponse20032Data](docs/InlineResponse20032Data.md)
 - [realtimenews.InlineResponse20032DataLevel](docs/InlineResponse20032DataLevel.md)
 - [realtimenews.InlineResponse20032DataParent](docs/InlineResponse20032DataParent.md)
 - [realtimenews.InlineResponse20032DataParentLevel](docs/InlineResponse20032DataParentLevel.md)
 - [realtimenews.InlineResponse20032DataSystem](docs/InlineResponse20032DataSystem.md)
 - [realtimenews.InlineResponse20033](docs/InlineResponse20033.md)
 - [realtimenews.InlineResponse20033Data](docs/InlineResponse20033Data.md)
 - [realtimenews.InlineResponse20033DataSystem](docs/InlineResponse20033DataSystem.md)
 - [realtimenews.InlineResponse20034](docs/InlineResponse20034.md)
 - [realtimenews.InlineResponse20034Data](docs/InlineResponse20034Data.md)
 - [realtimenews.InlineResponse20034DataParent](docs/InlineResponse20034DataParent.md)
 - [realtimenews.InlineResponse20034DataSystem](docs/InlineResponse20034DataSystem.md)
 - [realtimenews.InlineResponse20034Meta](docs/InlineResponse20034Meta.md)
 - [realtimenews.InlineResponse20035](docs/InlineResponse20035.md)
 - [realtimenews.InlineResponse20035Data](docs/InlineResponse20035Data.md)
 - [realtimenews.InlineResponse20036](docs/InlineResponse20036.md)
 - [realtimenews.InlineResponse20037](docs/InlineResponse20037.md)
 - [realtimenews.InlineResponse20037Meta](docs/InlineResponse20037Meta.md)
 - [realtimenews.InlineResponse20038](docs/InlineResponse20038.md)
 - [realtimenews.InlineResponse20038Data](docs/InlineResponse20038Data.md)
 - [realtimenews.InlineResponse20038DataSystem](docs/InlineResponse20038DataSystem.md)
 - [realtimenews.InlineResponse20039](docs/InlineResponse20039.md)
 - [realtimenews.InlineResponse20039Data](docs/InlineResponse20039Data.md)
 - [realtimenews.InlineResponse2004](docs/InlineResponse2004.md)
 - [realtimenews.InlineResponse20040](docs/InlineResponse20040.md)
 - [realtimenews.InlineResponse20040Data](docs/InlineResponse20040Data.md)
 - [realtimenews.InlineResponse20040DataType](docs/InlineResponse20040DataType.md)
 - [realtimenews.InlineResponse20041](docs/InlineResponse20041.md)
 - [realtimenews.InlineResponse20042](docs/InlineResponse20042.md)
 - [realtimenews.InlineResponse20043](docs/InlineResponse20043.md)
 - [realtimenews.InlineResponse20043Data](docs/InlineResponse20043Data.md)
 - [realtimenews.InlineResponse20043DataDistributor](docs/InlineResponse20043DataDistributor.md)
 - [realtimenews.InlineResponse20043DataLanguage](docs/InlineResponse20043DataLanguage.md)
 - [realtimenews.InlineResponse20043DataPublisher](docs/InlineResponse20043DataPublisher.md)
 - [realtimenews.InlineResponse20044](docs/InlineResponse20044.md)
 - [realtimenews.InlineResponse20044Meta](docs/InlineResponse20044Meta.md)
 - [realtimenews.InlineResponse20045](docs/InlineResponse20045.md)
 - [realtimenews.InlineResponse20045Data](docs/InlineResponse20045Data.md)
 - [realtimenews.InlineResponse20045DataDistributor](docs/InlineResponse20045DataDistributor.md)
 - [realtimenews.InlineResponse20045DataPublisher](docs/InlineResponse20045DataPublisher.md)
 - [realtimenews.InlineResponse20046](docs/InlineResponse20046.md)
 - [realtimenews.InlineResponse20046Data](docs/InlineResponse20046Data.md)
 - [realtimenews.InlineResponse20047](docs/InlineResponse20047.md)
 - [realtimenews.InlineResponse20047Data](docs/InlineResponse20047Data.md)
 - [realtimenews.InlineResponse20048](docs/InlineResponse20048.md)
 - [realtimenews.InlineResponse20049](docs/InlineResponse20049.md)
 - [realtimenews.InlineResponse2005](docs/InlineResponse2005.md)
 - [realtimenews.InlineResponse20050](docs/InlineResponse20050.md)
 - [realtimenews.InlineResponse20050Data](docs/InlineResponse20050Data.md)
 - [realtimenews.InlineResponse20051](docs/InlineResponse20051.md)
 - [realtimenews.InlineResponse20052](docs/InlineResponse20052.md)
 - [realtimenews.InlineResponse20052Data](docs/InlineResponse20052Data.md)
 - [realtimenews.InlineResponse20052DataDelivery](docs/InlineResponse20052DataDelivery.md)
 - [realtimenews.InlineResponse20053](docs/InlineResponse20053.md)
 - [realtimenews.InlineResponse20054](docs/InlineResponse20054.md)
 - [realtimenews.InlineResponse20054Data](docs/InlineResponse20054Data.md)
 - [realtimenews.InlineResponse20054DataDistributor](docs/InlineResponse20054DataDistributor.md)
 - [realtimenews.InlineResponse20055](docs/InlineResponse20055.md)
 - [realtimenews.InlineResponse20056](docs/InlineResponse20056.md)
 - [realtimenews.InlineResponse20057](docs/InlineResponse20057.md)
 - [realtimenews.InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [realtimenews.InlineResponse2006](docs/InlineResponse2006.md)
 - [realtimenews.InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [realtimenews.InlineResponse2007](docs/InlineResponse2007.md)
 - [realtimenews.InlineResponse2008](docs/InlineResponse2008.md)
 - [realtimenews.InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [realtimenews.InlineResponse2008DataCountry](docs/InlineResponse2008DataCountry.md)
 - [realtimenews.InlineResponse2008DataGroup](docs/InlineResponse2008DataGroup.md)
 - [realtimenews.InlineResponse2008DataTimezone](docs/InlineResponse2008DataTimezone.md)
 - [realtimenews.InlineResponse2008DataType](docs/InlineResponse2008DataType.md)
 - [realtimenews.InlineResponse2009](docs/InlineResponse2009.md)
 - [realtimenews.InlineResponse2009Meta](docs/InlineResponse2009Meta.md)
 - [realtimenews.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [realtimenews.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [realtimenews.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimenews.PartialOutputObject](docs/PartialOutputObject.md)
 - [realtimenews.PostBasicBackgroundTextTypeListDataItems](docs/PostBasicBackgroundTextTypeListDataItems.md)
 - [realtimenews.PostBasicBackgroundTextTypeListRequest](docs/PostBasicBackgroundTextTypeListRequest.md)
 - [realtimenews.PostBasicBackgroundTextTypeListRequestData](docs/PostBasicBackgroundTextTypeListRequestData.md)
 - [realtimenews.PostBasicBackgroundTextTypeListRequestDataFilter](docs/PostBasicBackgroundTextTypeListRequestDataFilter.md)
 - [realtimenews.PostBasicBackgroundTextTypeListRequestMeta](docs/PostBasicBackgroundTextTypeListRequestMeta.md)
 - [realtimenews.PostBasicDeliveryListDataItems](docs/PostBasicDeliveryListDataItems.md)
 - [realtimenews.PostBasicDeliveryListRequest](docs/PostBasicDeliveryListRequest.md)
 - [realtimenews.PostBasicDeliveryListRequestData](docs/PostBasicDeliveryListRequestData.md)
 - [realtimenews.PostBasicDeliveryListRequestDataFilter](docs/PostBasicDeliveryListRequestDataFilter.md)
 - [realtimenews.PostBasicDeliveryListRequestMeta](docs/PostBasicDeliveryListRequestMeta.md)
 - [realtimenews.PostBasicMarketListDataItems](docs/PostBasicMarketListDataItems.md)
 - [realtimenews.PostBasicMarketListDataItemsCountry](docs/PostBasicMarketListDataItemsCountry.md)
 - [realtimenews.PostBasicMarketListDataItemsGroup](docs/PostBasicMarketListDataItemsGroup.md)
 - [realtimenews.PostBasicMarketListDataItemsTimezone](docs/PostBasicMarketListDataItemsTimezone.md)
 - [realtimenews.PostBasicMarketListDataItemsType](docs/PostBasicMarketListDataItemsType.md)
 - [realtimenews.PostBasicMarketListRequest](docs/PostBasicMarketListRequest.md)
 - [realtimenews.PostBasicMarketListRequestData](docs/PostBasicMarketListRequestData.md)
 - [realtimenews.PostBasicMarketListRequestDataFilter](docs/PostBasicMarketListRequestDataFilter.md)
 - [realtimenews.PostBasicMarketListRequestDataFilterMarkets](docs/PostBasicMarketListRequestDataFilterMarkets.md)
 - [realtimenews.PostBasicMarketListRequestMeta](docs/PostBasicMarketListRequestMeta.md)
 - [realtimenews.PostBasicMarketListRequestMetaPagination](docs/PostBasicMarketListRequestMetaPagination.md)
 - [realtimenews.PostBasicMediaTypeListDataItems](docs/PostBasicMediaTypeListDataItems.md)
 - [realtimenews.PostBasicMediaTypeListDataItemsKind](docs/PostBasicMediaTypeListDataItemsKind.md)
 - [realtimenews.PostBasicMediaTypeListRequest](docs/PostBasicMediaTypeListRequest.md)
 - [realtimenews.PostBasicMediaTypeListRequestData](docs/PostBasicMediaTypeListRequestData.md)
 - [realtimenews.PostBasicMediaTypeListRequestDataFilter](docs/PostBasicMediaTypeListRequestDataFilter.md)
 - [realtimenews.PostBasicMediaTypeListRequestMeta](docs/PostBasicMediaTypeListRequestMeta.md)
 - [realtimenews.PostBasicMicOperatingListDataItems](docs/PostBasicMicOperatingListDataItems.md)
 - [realtimenews.PostBasicMicOperatingListRequest](docs/PostBasicMicOperatingListRequest.md)
 - [realtimenews.PostBasicMicOperatingListRequestData](docs/PostBasicMicOperatingListRequestData.md)
 - [realtimenews.PostBasicMicOperatingListRequestDataFilter](docs/PostBasicMicOperatingListRequestDataFilter.md)
 - [realtimenews.PostBasicMicOperatingListRequestMeta](docs/PostBasicMicOperatingListRequestMeta.md)
 - [realtimenews.PostBasicTimezoneListDataItems](docs/PostBasicTimezoneListDataItems.md)
 - [realtimenews.PostBasicTimezoneListRequest](docs/PostBasicTimezoneListRequest.md)
 - [realtimenews.PostBasicTimezoneListRequestData](docs/PostBasicTimezoneListRequestData.md)
 - [realtimenews.PostBasicTimezoneListRequestDataFilter](docs/PostBasicTimezoneListRequestDataFilter.md)
 - [realtimenews.PostBasicValueUnitCurrencyListDataItems](docs/PostBasicValueUnitCurrencyListDataItems.md)
 - [realtimenews.PostBasicValueUnitCurrencyListRequest](docs/PostBasicValueUnitCurrencyListRequest.md)
 - [realtimenews.PostBasicValueUnitCurrencyListRequestMeta](docs/PostBasicValueUnitCurrencyListRequestMeta.md)
 - [realtimenews.PostBasicValueUnitCurrencyMainListDataItems](docs/PostBasicValueUnitCurrencyMainListDataItems.md)
 - [realtimenews.PostBasicValueUnitCurrencyMainListRequest](docs/PostBasicValueUnitCurrencyMainListRequest.md)
 - [realtimenews.PostBasicValueUnitCurrencyMainListRequestData](docs/PostBasicValueUnitCurrencyMainListRequestData.md)
 - [realtimenews.PostBasicValueUnitCurrencyMainListRequestDataFilter](docs/PostBasicValueUnitCurrencyMainListRequestDataFilter.md)
 - [realtimenews.PostBasicValueUnitListDataItems](docs/PostBasicValueUnitListDataItems.md)
 - [realtimenews.PostBasicValueUnitListRequest](docs/PostBasicValueUnitListRequest.md)
 - [realtimenews.PostBasicValueUnitListRequestData](docs/PostBasicValueUnitListRequestData.md)
 - [realtimenews.PostBasicValueUnitListRequestDataFilter](docs/PostBasicValueUnitListRequestDataFilter.md)
 - [realtimenews.PostBasicValueUnitListRequestMeta](docs/PostBasicValueUnitListRequestMeta.md)
 - [realtimenews.PostNewsArticleListByChainDataArticlesCategoriesItems](docs/PostNewsArticleListByChainDataArticlesCategoriesItems.md)
 - [realtimenews.PostNewsArticleListByChainDataArticlesInstrumentsItems](docs/PostNewsArticleListByChainDataArticlesInstrumentsItems.md)
 - [realtimenews.PostNewsArticleListByChainDataArticlesItems](docs/PostNewsArticleListByChainDataArticlesItems.md)
 - [realtimenews.PostNewsArticleListByChainDataArticlesItemsLanguage](docs/PostNewsArticleListByChainDataArticlesItemsLanguage.md)
 - [realtimenews.PostNewsArticleListByChainDataArticlesTypesItems](docs/PostNewsArticleListByChainDataArticlesTypesItems.md)
 - [realtimenews.PostNewsArticleListByChainRequest](docs/PostNewsArticleListByChainRequest.md)
 - [realtimenews.PostNewsArticleListByChainRequestData](docs/PostNewsArticleListByChainRequestData.md)
 - [realtimenews.PostNewsArticleListByChainRequestDataFilter](docs/PostNewsArticleListByChainRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListByChainRequestDataFilterRange](docs/PostNewsArticleListByChainRequestDataFilterRange.md)
 - [realtimenews.PostNewsArticleListByChainRequestMeta](docs/PostNewsArticleListByChainRequestMeta.md)
 - [realtimenews.PostNewsArticleListByChainRequestMetaSubscription](docs/PostNewsArticleListByChainRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesCategoriesItems](docs/PostNewsArticleListByIndexDataArticlesCategoriesItems.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesInstrumentsItems](docs/PostNewsArticleListByIndexDataArticlesInstrumentsItems.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesItems](docs/PostNewsArticleListByIndexDataArticlesItems.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesItemsChain](docs/PostNewsArticleListByIndexDataArticlesItemsChain.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesItemsDistributor](docs/PostNewsArticleListByIndexDataArticlesItemsDistributor.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesItemsLanguage](docs/PostNewsArticleListByIndexDataArticlesItemsLanguage.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesItemsPublisher](docs/PostNewsArticleListByIndexDataArticlesItemsPublisher.md)
 - [realtimenews.PostNewsArticleListByIndexDataArticlesTypesItems](docs/PostNewsArticleListByIndexDataArticlesTypesItems.md)
 - [realtimenews.PostNewsArticleListByIndexDataIdentifiersItems](docs/PostNewsArticleListByIndexDataIdentifiersItems.md)
 - [realtimenews.PostNewsArticleListByIndexDataIdentifiersItemsStatus](docs/PostNewsArticleListByIndexDataIdentifiersItemsStatus.md)
 - [realtimenews.PostNewsArticleListByIndexRequest](docs/PostNewsArticleListByIndexRequest.md)
 - [realtimenews.PostNewsArticleListByIndexRequestData](docs/PostNewsArticleListByIndexRequestData.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilter](docs/PostNewsArticleListByIndexRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterCategories](docs/PostNewsArticleListByIndexRequestDataFilterCategories.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterDistributor](docs/PostNewsArticleListByIndexRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterLanguage](docs/PostNewsArticleListByIndexRequestDataFilterLanguage.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterPublisher](docs/PostNewsArticleListByIndexRequestDataFilterPublisher.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterRegions](docs/PostNewsArticleListByIndexRequestDataFilterRegions.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataFilterTypes](docs/PostNewsArticleListByIndexRequestDataFilterTypes.md)
 - [realtimenews.PostNewsArticleListByIndexRequestDataIdentifier](docs/PostNewsArticleListByIndexRequestDataIdentifier.md)
 - [realtimenews.PostNewsArticleListByIndexRequestMeta](docs/PostNewsArticleListByIndexRequestMeta.md)
 - [realtimenews.PostNewsArticleListByIndexRequestMetaSubscription](docs/PostNewsArticleListByIndexRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesCategoriesItems](docs/PostNewsArticleListByInstrumentDataArticlesCategoriesItems.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesInstrumentsItems](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItems.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesItems](docs/PostNewsArticleListByInstrumentDataArticlesItems.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesItemsChain](docs/PostNewsArticleListByInstrumentDataArticlesItemsChain.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesItemsDistributor](docs/PostNewsArticleListByInstrumentDataArticlesItemsDistributor.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesItemsLanguage](docs/PostNewsArticleListByInstrumentDataArticlesItemsLanguage.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesItemsPublisher](docs/PostNewsArticleListByInstrumentDataArticlesItemsPublisher.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataArticlesTypesItems](docs/PostNewsArticleListByInstrumentDataArticlesTypesItems.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataIdentifiersItems](docs/PostNewsArticleListByInstrumentDataIdentifiersItems.md)
 - [realtimenews.PostNewsArticleListByInstrumentDataIdentifiersItemsStatus](docs/PostNewsArticleListByInstrumentDataIdentifiersItemsStatus.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequest](docs/PostNewsArticleListByInstrumentRequest.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestData](docs/PostNewsArticleListByInstrumentRequestData.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataFilter](docs/PostNewsArticleListByInstrumentRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataFilterCategories](docs/PostNewsArticleListByInstrumentRequestDataFilterCategories.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataFilterDistributor](docs/PostNewsArticleListByInstrumentRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataFilterPublisher](docs/PostNewsArticleListByInstrumentRequestDataFilterPublisher.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataFilterRange](docs/PostNewsArticleListByInstrumentRequestDataFilterRange.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestDataIdentifier](docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestMeta](docs/PostNewsArticleListByInstrumentRequestMeta.md)
 - [realtimenews.PostNewsArticleListByInstrumentRequestMetaSubscription](docs/PostNewsArticleListByInstrumentRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataCategoriesItems](docs/PostNewsArticleListByMediaKindDataCategoriesItems.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataInstrumentsItems](docs/PostNewsArticleListByMediaKindDataInstrumentsItems.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataItems](docs/PostNewsArticleListByMediaKindDataItems.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataItemsChain](docs/PostNewsArticleListByMediaKindDataItemsChain.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataItemsDistributor](docs/PostNewsArticleListByMediaKindDataItemsDistributor.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataItemsLanguage](docs/PostNewsArticleListByMediaKindDataItemsLanguage.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataItemsPublisher](docs/PostNewsArticleListByMediaKindDataItemsPublisher.md)
 - [realtimenews.PostNewsArticleListByMediaKindDataTypesItems](docs/PostNewsArticleListByMediaKindDataTypesItems.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequest](docs/PostNewsArticleListByMediaKindRequest.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestData](docs/PostNewsArticleListByMediaKindRequestData.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestDataFilter](docs/PostNewsArticleListByMediaKindRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestDataFilterDistributor](docs/PostNewsArticleListByMediaKindRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestDataFilterLanguage](docs/PostNewsArticleListByMediaKindRequestDataFilterLanguage.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestDataFilterPublisher](docs/PostNewsArticleListByMediaKindRequestDataFilterPublisher.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestDataFilterTypes](docs/PostNewsArticleListByMediaKindRequestDataFilterTypes.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestMeta](docs/PostNewsArticleListByMediaKindRequestMeta.md)
 - [realtimenews.PostNewsArticleListByMediaKindRequestMetaSubscription](docs/PostNewsArticleListByMediaKindRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleListDataCategoriesItems](docs/PostNewsArticleListDataCategoriesItems.md)
 - [realtimenews.PostNewsArticleListDataInstrumentsItems](docs/PostNewsArticleListDataInstrumentsItems.md)
 - [realtimenews.PostNewsArticleListDataItems](docs/PostNewsArticleListDataItems.md)
 - [realtimenews.PostNewsArticleListDataItemsChain](docs/PostNewsArticleListDataItemsChain.md)
 - [realtimenews.PostNewsArticleListDataTypesItems](docs/PostNewsArticleListDataTypesItems.md)
 - [realtimenews.PostNewsArticleListRequest](docs/PostNewsArticleListRequest.md)
 - [realtimenews.PostNewsArticleListRequestData](docs/PostNewsArticleListRequestData.md)
 - [realtimenews.PostNewsArticleListRequestDataFilter](docs/PostNewsArticleListRequestDataFilter.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterCategories](docs/PostNewsArticleListRequestDataFilterCategories.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterDistributor](docs/PostNewsArticleListRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterLanguage](docs/PostNewsArticleListRequestDataFilterLanguage.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterPublisher](docs/PostNewsArticleListRequestDataFilterPublisher.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterRange](docs/PostNewsArticleListRequestDataFilterRange.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterRegions](docs/PostNewsArticleListRequestDataFilterRegions.md)
 - [realtimenews.PostNewsArticleListRequestDataFilterTypes](docs/PostNewsArticleListRequestDataFilterTypes.md)
 - [realtimenews.PostNewsArticleListRequestMeta](docs/PostNewsArticleListRequestMeta.md)
 - [realtimenews.PostNewsArticleListRequestMetaPagination](docs/PostNewsArticleListRequestMetaPagination.md)
 - [realtimenews.PostNewsArticleListRequestMetaSubscription](docs/PostNewsArticleListRequestMetaSubscription.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCategoriesItems](docs/PostNewsArticleSearchByTextDataCategoriesItems.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItems](docs/PostNewsArticleSearchByTextDataCriteriaItems.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsCategories](docs/PostNewsArticleSearchByTextDataCriteriaItemsCategories.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsDistributor](docs/PostNewsArticleSearchByTextDataCriteriaItemsDistributor.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsIndices](docs/PostNewsArticleSearchByTextDataCriteriaItemsIndices.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsInstruments](docs/PostNewsArticleSearchByTextDataCriteriaItemsInstruments.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsLanguage](docs/PostNewsArticleSearchByTextDataCriteriaItemsLanguage.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsPublisher](docs/PostNewsArticleSearchByTextDataCriteriaItemsPublisher.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsRegions](docs/PostNewsArticleSearchByTextDataCriteriaItemsRegions.md)
 - [realtimenews.PostNewsArticleSearchByTextDataCriteriaItemsTypes](docs/PostNewsArticleSearchByTextDataCriteriaItemsTypes.md)
 - [realtimenews.PostNewsArticleSearchByTextDataInstrumentsItems](docs/PostNewsArticleSearchByTextDataInstrumentsItems.md)
 - [realtimenews.PostNewsArticleSearchByTextDataItems](docs/PostNewsArticleSearchByTextDataItems.md)
 - [realtimenews.PostNewsArticleSearchByTextDataItemsPublisher](docs/PostNewsArticleSearchByTextDataItemsPublisher.md)
 - [realtimenews.PostNewsArticleSearchByTextDataTypesItems](docs/PostNewsArticleSearchByTextDataTypesItems.md)
 - [realtimenews.PostNewsArticleSearchByTextRequest](docs/PostNewsArticleSearchByTextRequest.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestData](docs/PostNewsArticleSearchByTextRequestData.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataText](docs/PostNewsArticleSearchByTextRequestDataText.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestDataTextCriteria](docs/PostNewsArticleSearchByTextRequestDataTextCriteria.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestMeta](docs/PostNewsArticleSearchByTextRequestMeta.md)
 - [realtimenews.PostNewsArticleSearchByTextRequestMetaSubscription](docs/PostNewsArticleSearchByTextRequestMetaSubscription.md)
 - [realtimenews.PostNewsPublisherSearchByNameDataItems](docs/PostNewsPublisherSearchByNameDataItems.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequest](docs/PostNewsPublisherSearchByNameRequest.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestData](docs/PostNewsPublisherSearchByNameRequestData.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilter](docs/PostNewsPublisherSearchByNameRequestDataFilter.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilterDelivery](docs/PostNewsPublisherSearchByNameRequestDataFilterDelivery.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestDataFilterDistributor](docs/PostNewsPublisherSearchByNameRequestDataFilterDistributor.md)
 - [realtimenews.PostNewsPublisherSearchByNameRequestMeta](docs/PostNewsPublisherSearchByNameRequestMeta.md)
 - [realtimenews.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
